# C_game_on_easyx

./: CMakeLists.txt  README.md
app/: main.cpp
include/: character.h  gamerun.h
src/: character.cpp  gamerun.cpp
